# deamat

./: .gitignore  .llmignore  AGENTS.md  README.md  VISPY.md  change_author.sh  example.py  flake.nix  mpl_view.py  pyproject.toml  requirements.txt  update.py
deamat/: __init__.py  __main__.py  gui.py  guistate.py  mpl_view.py  sync.py  widgets.py
deamat/widgets/: __init__.py  figure.py  pg_surface.py  pygfx_canvas.py  vispy_canvas.py
examples/: 1-basic.py  2-ui_update.py  3-matplotlib.py  4-async_update.py  4-pyglet_animation.py  4-vispy.py  5-async_update.py  5-pygfx.py  5-vispy.py  6-pygfx_more.py  6-pyglet_surface.py  6-vispy_more.py  7-sync_context.py  8-pygfx.py  8-pygfx_2d.py  9-pygfx_more.py  basic.py  matplotlib.py  pyglet_animation.py
tests/: test_gui.py
x/: mpl_view.py  to_appimage.py
