[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deamat"
version = "0.1.0"
description = "A Python GUI boilerplate"
authors = [
    { name = "verdigris", email = "verdigris1903@proton.me" }
]
dependencies = [
    "annotated-types==0.7.0",
    "cocos2d==0.6.10",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "Cython==0.29.37",
    "enum34==1.1.10",
    "fonttools==4.53.1",
    "glfw==2.7.0",
    "imgui==2.0.0",
    "imgui-bundle==1.5.2",
    "imgui-datascience==0.3.2",
    "kiwisolver==1.4.5",
    "matplotlib==3.9.2",
    "munch==4.0.0",
    "numpy==2.0.1",
    "opencv-python==4.10.0.84",
    "packaging==24.1",
    "pillow==10.4.0",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "pygame==2.6.0",
    "pyglet==1.5.29",
    "PyOpenGL==3.1.7",
    "pyparsing==3.1.2",
    "PySDL2==0.9.16",
    "python-dateutil==2.9.0.post0",
    "setuptools==72.2.0",
    "six==1.16.0",
    "typing_extensions==4.12.2",
    "xxhash==3.4.1"
]

[project.scripts]
mpl-view = "x.mpl_view:main"
