[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deamat"
version = "0.1.0"
description = "A Python GUI boilerplate"
authors = [
    { name = "verdigris", email = "verdigris1903@proton.me" }
]
dependencies = [

  "imgui-bundle",
  "opencv-python",
  "setuptools",
  "matplotlib",
  "pyglet"
]

[project.scripts]
mpl-view = "x.mpl_view:main"
