[build-system]
requires = [
    "setuptools>=68",
    "wheel>=0.37"
]
build-backend = "setuptools.build_meta"

[project]
name = "deamat"
version = "0.2.0"
description = "A Python GUI boilerplate"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "verdigris", email = "verdigris1903@proton.me" }
]
dependencies = [
    "annotated-types>=0.7.0",
    "contourpy>=1.2.1",
    "cycler>=0.12.1",
    "Cython>=0.29.37",
    "fonttools>=4.53.1",
    "glfw>=2.7.0",
    "imgui>=2.0.0",
    "imgui-bundle>=1.5.2",
    "imgui-datascience>=0.3.2",
    "kiwisolver>=1.4.5",
    "matplotlib>=3.9.2",
    "munch>=4.0.0",
    "numpy>=2.0.1",
    "opencv-python>=4.10.0.84",
    "packaging>=24.1",
    "pillow>=10.4.0",
    "pydantic>=2.8.2",
    "pydantic_core>=2.20.1",
    "PyOpenGL>=3.1.7",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0.post0",
    "setuptools>=72.2.0",
    "six>=1.16.0",
    "typing_extensions>=4.12.2",
    "xxhash>=3.4.1",
    "vispy>=0.15.2",
    "pygfx>=0.15.0",
    "wgpu>=0.19.0",
    "rendercanvas>=2.5.0",
    "ipython>=9.8.0",
    "pytest>=9.0.2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics"
]

[project.urls]
"Homepage" = "https://github.com/verdigris12/deamat"
"Source" = "https://github.com/verdigris12/deamat"
"Bug Tracker" = "https://github.com/verdigris12/deamat/issues"

[project.scripts]
deamat-demo = "deamat.__main__:main"
mplview = "deamat.mpl_view:main"

[tool.setuptools.packages]
find = {}
